# core-SF2CS-interface

./: CMakeLists.txt  README.md
core/: FaceEngine.cpp  FaceEngine.h
include/: CJFieldStruct.h  ConcurrentMap.h  JNIHelper.h  SF2CSStruct.h  in_bugr_jni_FaceEngine.h  interface.h
src/: Interface.cpp  JNIHelper.cpp  interface.cpp
test/: CMakeLists.txt  main.cpp
